--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,31 @@
-version: "3.9"
-
 services:
   redis:
     image: redis:7
     ports:
       - "6379:6379"
+
+  payment-charges-api:
+    build: ./payment-charges-api
+    ports:
+      - "5000:5000"
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - WEBHOOK_SECRET=super-secret
+      - FLASK_ENV=development
+    depends_on:
+      - redis
+
+  fake-bank-service:
+    build: ./fake-bank-service
+    ports:
+      - "6000:6000"
+    environment:
+      - WEBHOOK_SECRET=super-secret
+      - MAX_RETRIES=5
+      - INITIAL_DELAY_SECONDS=1
+      - BACKOFF_MULTIPLIER=2
+      - MAX_DELAY_SECONDS=10
+      - TIMEOUT_SECONDS=5
+    depends_on:
+      - payment-charges-api
+
