--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - FLASK_ENV=development
     depends_on:
       - redis
+    volumes:
+      - ./payment-charges-api/instance:/app/instance
+      - ./payment-charges-api/logs:/app/logs
+      
 
   fake-bank-service:
     build: ./fake-bank-service
@@ -28,4 +32,4 @@ services:
       - TIMEOUT_SECONDS=5
     depends_on:
       - payment-charges-api
-
+  
